--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-google-login": "^2.0.18",
+    "vue3-google-oauth2": "^1.0.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
